compiler/test/programs/syntax_error/bad_root_element.fl
<?xml version="1.0" encoding="UTF-8"?>
<fluid >
    <function
        name="main"
        id="1"
        x="10"
        y="10"
        z="3"
        w="100"
        h="100">
        <body>
        </body>
    </function>
</fluid>
